--- a/レシピ/豚ニラ玉.md
+++ b/レシピ/豚ニラ玉.md
@@ -1,6 +1,6 @@
 # 豚ニラ玉
 
-<img src="./images/豚ニラ玉.jpg" width="50%" alt="豚ニラ玉" />
+<img src="../images/豚ニラ玉.jpg" width="50%" alt="豚ニラ玉" />
 
 ## 具材
 
