--- a/レシピ/某うどん屋さん風カレー.md
+++ b/レシピ/某うどん屋さん風カレー.md
@@ -25,7 +25,7 @@
 1. 玉ねぎと鶏肉、ジャガイモ、人参を食べやすいサイズに切る
 2. 油を引いて、玉ねぎを茶色くなるまで炒める
 3. 玉ねぎを取り出し、鶏肉、ジャガイモ、にんじんを炒める。鶏肉には①塩胡椒をふる
-4. 火を強火にして、水を入れて沸騰するまで待つ（10分ぐらい）
+4. 玉ねぎも入れて、火を強火にして、水を入れて沸騰するまで待つ（10分ぐらい）
 5. 沸騰したら、火を弱火にしてバーモンドカレーとジャワカレーのルーを入れて、ルーを溶かす
 6. ②を入れて、混ぜる
 7. 弱火にした状態で15分待ったら完成
