--- a/レシピ/肉じゃが.md
+++ b/レシピ/肉じゃが.md
@@ -30,4 +30,4 @@
 
 ## 参考
 
-[なんて完全な…肉じゃがなんだ【ASMR](https://youtube.com/shorts/7fClf2ja4gc?si=VWKknmnEaXGkSaGb)
+[なんて完全な…肉じゃがなんだ【ASMR】](https://youtube.com/shorts/7fClf2ja4gc?si=VWKknmnEaXGkSaGb)
