--- a/レシピ/肉じゃが.md
+++ b/レシピ/肉じゃが.md
@@ -19,7 +19,7 @@
 
 ## 調理方法
 
-1. 豚バラを切って、砂糖と醤油でを加えて揉む
+1. 豚バラを切って、砂糖と醤油を加えて揉む
 2. ジャガイモ、玉ねぎ、人参を切る。ジャガイモは５分間水につけておく
 3. フライパンに油を引いてジャガイモと玉ねぎを炒める
 4. 豚バラを入れて炒める
